# raytracer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cc  vector3.cpp  vector3.h
src/scene/: CMakeLists.txt  camera.cc  camera.hh  object.cc  object.hh  scene.cc  scene.hh  texturematerial.hh  uniformtexture.cc  uniformtexture.hh
src/scene/light/: CMakeLists.txt  light.cc  light.hh  pointlight.cc  pointlight.hh
src/scene/object/: CMakeLists.txt  object.cc  object.hh  plane.cc  plane.hh  sphere.cc  sphere.hh  square.cc  square.hh  triangle.cc  triangle.hh
src/scene/texture/: CMakeLists.txt  texturematerial.cc  texturematerial.hh  uniformtexture.cc  uniformtexture.hh
src/utils/: CMakeLists.txt  color.cc  color.hh  image.cc  image.hh  ray.cc  ray.hh  vector3.cc  vector3.hh  vertex.cc  vertex.hh
src/utils/parser/: CMakeLists.txt  parser.cc  parser.hh
src/utils/polygon/: CMakeLists.txt  polygon.cc  polygon.hh  square.cc  square.hh  triangle.cc  triangle.hh
